# codehealthanalyzer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README_EN.md  example.py  example_report.csv  noxfile.py  pyproject.toml  requirements.txt  setup.py
.githooks/: pre-push
.github/workflows/: auto-tag-from-version.yml  ci.yml  python-publish.yml
codehealthanalyzer/: __init__.py  __main__.py  config.py  exceptions.py  i18n.py  schemas.py  version.py
codehealthanalyzer/analyzers/: __init__.py  base.py  errors.py  templates.py  violations.py
codehealthanalyzer/cli/: __init__.py  __init__.py.isorted  main.py
codehealthanalyzer/reports/: __init__.py  formatter.py  generator.py  report.py
codehealthanalyzer/reports/templates/: base.html  report.html
codehealthanalyzer/utils/: __init__.py  categorizer.py  helpers.py  validators.py
codehealthanalyzer/web/: __init__.py  server.py
codehealthanalyzer/web/templates/: dashboard.html
docs/: conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/en/: index.rst  installation.rst  quickstart.rst
scripts/: check_ci.sh  compile_translations.py  format.ps1  format.sh  format_all.py  lint.ps1  lint.sh
tests/: conftest.py  test_base_analyzer.py  test_categorizer.py  test_cli.py  test_cli_contract.py  test_config.py  test_contracts.py  test_dashboard.py  test_errors_analyzer.py  test_exceptions.py  test_helpers.py  test_quality_score.py  test_report_formatter.py  test_smoke.py  test_templates_analyzer.py  test_validators.py  test_violations_analyzer.py
(+1 files in other folders)
