[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
